--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
 			stage('build')	{
 				steps {
 					withMaven(maven: 'Maven_Home'){
-						sh 'mvn clean compile'
+						bat 'mvn clean compile'
 					}			
 				}
 			}
@@ -12,7 +12,7 @@ pipeline {
 			stage('test') {
 				steps {
 					withMaven(maven: 'Maven_Home'){
-						sh 'mvn test'
+						bat 'mvn test'
 					}			
 				}
 			
@@ -21,7 +21,7 @@ pipeline {
 			stage('deploy') {
 				steps {
 					withMaven(maven: 'Maven_Home'){
-						sh 'mvn deploy'
+						bat 'mvn deploy'
 					}			
 				}
 			
